compiler/tests/success/require/file2.jazz
require "file1.jazz"
require "../require/file1.jazz"

export fn main(reg u64 x y) -> reg u64 {
   reg u64 r1 r2;
   r1 = add(x,y);
   r2 = r1;
   return r2;
}

