compiler/tests/fail/slh/x86-64/protect_kills_msf.jazz
export
fn main() -> reg u64 {
    reg u64 msf;
    msf = #init_msf();
    msf = #protect(msf, msf);
    msf = #protect(msf, msf);
    return msf;
}
